--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -18,8 +18,9 @@
     </head>
     <body>
         <h1><span id="refname"></span> Results</h1>
-        <div id="viewer"></div>
-        <script src="https://cdn.jsdelivr.net/npm/igv@2.8.6/dist/igv.min.js"></script>
+        <div style="margin-left: auto; margin-right: auto;">
+            <ul id="sample-list"></ul>
+        </div>
         <script>
             var reference
             var req = new XMLHttpRequest();
@@ -39,37 +40,22 @@
             re.open('GET', '/samples', false)
             re.send()
 
-            var trks = [];
-
             refname = reference.replace('.fasta', '')
             refspan = document.getElementById('refname');
-            refspan.innerHTML = refname
+            refspan.innerHTML = refname;
+
+            samplelist = document.getElementById('sample-list');
 
             for (var i = 0; i < samples.length; i++) {
                 s = samples[i]
-                trks.push(
-                    {
-                        type: 'alignment',
-                        format: 'bam',
-                        url: 'data/'+s,
-                        indexURL: 'data/'+s+'.bai',
-                        name: s.slice(0,-4)
-                    }
-                )
-            }
 
-            igvDiv = document.getElementById('viewer');
-            options = {
-                reference: {
-                    id: reference.slice(0,-6),
-                    fastaURL: "data/"+reference
-                },
-                tracks: trks
+                if (!s.includes('contigs')) {
+                    var li = document.createElement('li');
+                    sname = s.replace('.bam', '');
+                    li.innerHTML = '<a href="/sample?s=' + sname + '">' + sname + '</a>'
+                    samplelist.appendChild(li);
+                }
             }
-            igv.createBrowser(igvDiv, options).
-                then(function(browser) {
-                    igv.browser = browser;
-                });
         </script>
     </body>
 </html>
