--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -5,10 +5,11 @@
             body {
                 background-color: #d1d1f1;
             }
-            #viewer {
+            #viewer,#tree {
                 outline: solid;
                 border-radius: 2pt;
                 background-color: white;
+                overflow: hidden
             }
             h1 {
                 font-family: 'Myriad Pro', 'Noto Sans', 'Lucida Sans', Verdana, 'Liberation Sans', sans-serif;
@@ -18,14 +19,46 @@
     </head>
     <body>
         <h1 id="sname"></h1>
+        <div id="tree" style="height: 765px;"></div>
+        <br/>
+        <hr/>
+        <br/>
         <div id="viewer"></div>
-        <script src="https://cdn.jsdelivr.net/npm/igv@2.8.6/dist/igv.min.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script>
+        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="js/treecompare.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+        <script type="text/javascript" src="js/spin.min.js"></script>
+        <script type="text/javascript" src="js/d3.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/circular-json.js"></script>
+        <script type="text/javascript" src="js/canvas-toBlob.js"></script>
+        <script type="text/javascript" src="js/FileSaver.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/igv@2.10.1/dist/igv.min.js" integrity="sha256-IL11Cr2n1bq8lPpegi/slZoM59GP4qg/QSOZ0AjK5es=" crossorigin="anonymous"></script>
+
         <script>
             var p = new URLSearchParams(window.location.search);
             var s = p.get('s')
 
             header = document.getElementById('sname');
             header.innerHTML = s;
+
+            var phylotree
+            var preq = new XMLHttpRequest();
+            preq.onload = preqlistener;
+            function preqlistener(e) {
+                phylotree = this.responseText;
+            }
+            preq.open('GET', '/data/'+s+'.tree', false);
+            preq.send();
+
+            var treecomp = TreeCompare().init({
+                treeHeight: 600
+            });
+            tree = treecomp.addTree(phylotree, undefined, 'single');
+            treecomp.viewTree(tree.name, 'tree');
 
             var reference
             var req = new XMLHttpRequest();
