--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -18,6 +18,7 @@
     </head>
     <body>
         <h1><span id="refname"></span> Results</h1>
+        <a href="/multiqc">MultiQC Report</a>
         <div style="margin-left: auto; margin-right: auto;">
             <ul id="sample-list"></ul>
         </div>
