visualizer: Replace all scripts with CDNs
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -25,18 +25,16 @@
         <br/>
         <div id="viewer"></div>
 
-        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-        <script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script>
-        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-        <script type="text/javascript" src="js/treecompare.js"></script>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
-        <script type="text/javascript" src="js/spin.min.js"></script>
-        <script type="text/javascript" src="js/d3.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/circular-json.js"></script>
-        <script type="text/javascript" src="js/canvas-toBlob.js"></script>
-        <script type="text/javascript" src="js/FileSaver.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/big-integer@1.6.49/BigInteger.min.js" integrity="sha256-n5Q1++9U0SqhjK2YGRLcEjpsRtngS4P7w6vq8BzpMq0=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/spin.js@2.3.2/spin.min.js" integrity="sha256-PieqE0QdEDMppwXrTzSZQr6tWFX3W5KkyRVyF1zN3eg=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/d3@3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/circular-json@0.5.9/build/circular-json.js" integrity="sha256-LihD3ZGcEV8l3ys0o+gla6ZmJSvZxYi1qjvjUE1WJ2s=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/canvas-toBlob@1.0.0/canvas-toBlob.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/file-saver@1.3.8/FileSaver.min.js" integrity="sha256-FPJJt8nA+xL4RU6/gsriA8p8xAeLGatoyTjldvQKGdE=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/igv@2.10.1/dist/igv.min.js" integrity="sha256-IL11Cr2n1bq8lPpegi/slZoM59GP4qg/QSOZ0AjK5es=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/gh/DessimozLab/phylo-io@1.9/www/js/treecompare.js"></script>
 
         <script>
             var p = new URLSearchParams(window.location.search);
