--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -33,7 +33,7 @@
         <script src="https://cdn.jsdelivr.net/npm/circular-json@0.5.9/build/circular-json.js" integrity="sha256-LihD3ZGcEV8l3ys0o+gla6ZmJSvZxYi1qjvjUE1WJ2s=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/canvas-toBlob@1.0.0/canvas-toBlob.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/file-saver@1.3.8/FileSaver.min.js" integrity="sha256-FPJJt8nA+xL4RU6/gsriA8p8xAeLGatoyTjldvQKGdE=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/igv@2.10.1/dist/igv.min.js" integrity="sha256-IL11Cr2n1bq8lPpegi/slZoM59GP4qg/QSOZ0AjK5es=" crossorigin="anonymous"></script>
+        <script src="/js/igv/igv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/DessimozLab/phylo-io@1.9/www/js/treecompare.js"></script>
 
         <script>
