visualizer: Switch to locally-hosted BigInteger
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -26,7 +26,7 @@
         <div id="viewer"></div>
 
         <script src="/js/jquery/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/big-integer@1.6.49/BigInteger.min.js" integrity="sha256-n5Q1++9U0SqhjK2YGRLcEjpsRtngS4P7w6vq8BzpMq0=" crossorigin="anonymous"></script>
+        <script src="/js/big-integer/BigInteger.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/spin.js@2.3.2/spin.min.js" integrity="sha256-PieqE0QdEDMppwXrTzSZQr6tWFX3W5KkyRVyF1zN3eg=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/d3@3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
