--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -27,7 +27,7 @@
 
         <script src="/js/jquery/jquery.slim.min.js"></script>
         <script src="/js/big-integer/BigInteger.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+        <script src="/js/underscore/underscore-umd-min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/spin.js@2.3.2/spin.min.js" integrity="sha256-PieqE0QdEDMppwXrTzSZQr6tWFX3W5KkyRVyF1zN3eg=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/d3@3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/circular-json@0.5.9/build/circular-json.js" integrity="sha256-LihD3ZGcEV8l3ys0o+gla6ZmJSvZxYi1qjvjUE1WJ2s=" crossorigin="anonymous"></script>
