--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -29,7 +29,7 @@
         <script src="/js/big-integer/BigInteger.min.js"></script>
         <script src="/js/underscore/underscore-umd-min.js"></script>
         <script src="/js/spin/spin.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/d3@3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
+        <script src="/js/d3/d3.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/circular-json@0.5.9/build/circular-json.js" integrity="sha256-LihD3ZGcEV8l3ys0o+gla6ZmJSvZxYi1qjvjUE1WJ2s=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/canvas-toBlob@1.0.0/canvas-toBlob.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/file-saver@1.3.8/FileSaver.min.js" integrity="sha256-FPJJt8nA+xL4RU6/gsriA8p8xAeLGatoyTjldvQKGdE=" crossorigin="anonymous"></script>
