--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -31,7 +31,7 @@
         <script src="/js/spin/spin.min.js"></script>
         <script src="/js/d3/d3.min.js"></script>
         <script src="/js/cjson/circular-json.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/canvas-toBlob@1.0.0/canvas-toBlob.min.js"></script>
+        <script src="/js/cblob/canvas-toBlob.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/file-saver@1.3.8/FileSaver.min.js" integrity="sha256-FPJJt8nA+xL4RU6/gsriA8p8xAeLGatoyTjldvQKGdE=" crossorigin="anonymous"></script>
         <script src="/js/igv/igv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/DessimozLab/phylo-io@1.9/www/js/treecompare.js"></script>
