visualizer: Add Bootstrap
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/visualizer/sample.html
+++ b/visualizer/sample.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="/css/twbs/bootstrap.min.css" type="text/css">
         <style>
             body {
                 background-color: #d1d1f1;
@@ -26,12 +27,13 @@
         <div id="viewer"></div>
 
         <script src="/js/jquery/jquery.slim.min.js"></script>
+        <script src="/js/twbs/bootstrap.min.js"></script>
         <script src="/js/big-integer/BigInteger.min.js"></script>
         <script src="/js/underscore/underscore-umd-min.js"></script>
         <script src="/js/spin/spin.min.js"></script>
         <script src="/js/d3/d3.min.js"></script>
         <script src="/js/cjson/circular-json.js"></script>
-        <script src="/js/cblob/canvas-toBlob.min.js"></script>
+        <script src="/js/cblob/canvas-toBlob.js"></script>
         <script src="/js/filesaver/FileSaver.min.js"></script>
         <script src="/js/igv/igv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/DessimozLab/phylo-io@1.9/www/js/treecompare.js"></script>
