--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -4,21 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta
-      name="description"
-      content="YAVSAP (Yet Another Viral Subspecies Analysis Pipeline)"
-    />
+    <meta name="description" content="YAVSAP (Yet Another Viral Subspecies Analysis Pipeline)" />
     <title>YAVSAP Pipeline Report</title>
   </head>
   <body>
-    <div
-      style="
-        font-family: Helvetica, Arial, sans-serif;
-        padding: 30px;
-        max-width: 800px;
-        margin: 0 auto;
-      "
-    >
+    <div style="font-family: Helvetica, Arial, sans-serif; padding: 30px; max-width: 800px; margin: 0 auto">
       <img src="cid:nfcorepipelinelogo" />
 
       <h1>YAVSAP v${version}</h1>
@@ -36,17 +26,10 @@
           border-radius: 4px;
         "
       >
-        <h4 style="margin-top: 0; color: inherit">
-          YAVSAP execution completed unsuccessfully!
-        </h4>
-        <p>
-          The exit status of the task that caused the workflow execution to fail
-          was: <code>$exitStatus</code>.
-        </p>
+        <h4 style="margin-top: 0; color: inherit">YAVSAP execution completed unsuccessfully!</h4>
+        <p>The exit status of the task that caused the workflow execution to fail was: <code>$exitStatus</code>.</p>
         <p>The full error message was:</p>
-        <pre style="white-space: pre-wrap; overflow: visible; margin-bottom: 0">
-${errorReport}</pre
-        >
+        <pre style="white-space: pre-wrap; overflow: visible; margin-bottom: 0">${errorReport}</pre>
       </div>
       """ } else { out << """
       <div
@@ -64,10 +47,7 @@ ${errorReport}</pre
       </div>
       """ } %>
 
-      <p>
-        The workflow was completed at <strong>$dateComplete</strong> (duration:
-        <strong>$duration</strong>)
-      </p>
+      <p>The workflow was completed at <strong>$dateComplete</strong> (duration: <strong>$duration</strong>)</p>
       <p>The command used to launch the workflow was as follows:</p>
       <pre
         style="
@@ -125,9 +105,7 @@ $commandLine</pre
 
       <p>YAVSAP (Yet Another Viral Subspecies Analysis Pipeline)</p>
       <p>
-        <a href="https://github.com/ksumngs/yavsap"
-          >https://github.com/ksumng/yavsap</a
-        >
+        <a href="https://github.com/ksumngs/yavsap">https://github.com/ksumng/yavsap</a>
       </p>
     </div>
   </body>
