Change IGV sub-report metadata to use HTML in description
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/assets/igv_mqc.html
+++ b/assets/igv_mqc.html
@@ -1,8 +1,8 @@
 <!--
-id: igv
+id: minimap2
 section_name: minimap2
-description: "[minimap2](https://www.ncbi.nlm.nih.gov/pubmed/29750242/) is a versatile pairwise aligner for genomic sequences"
-doi: 10.1093/bioinformatics/bty191
+section_href: https://lh3.github.io/minimap2/
+description: '<a href="https://lh3.github.io/minimap2/">minimap2</a> is a versatile pairwise aligner for genomic and spliced nucleotide sequences. <em class="text-muted small" style="margin-left: 1rem">DOI: <a class="module-doi" data-doi="10.1093/bioinformatics/bty191" data-toggle="popover" href="https://doi.org/10.1093/bioinformatics/bty191" target="_blank">10.1093/bioinformatics/bty191</a></em>.'
 -->
 <div id="igv-canvas"></div>
 
