Change phylotree sub-report metadata to use HTML in description
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/assets/phylotree_mqc.html
+++ b/assets/phylotree_mqc.html
@@ -1,11 +1,8 @@
 <!--
-id: phylotree
-section_name: Phylotree.js
-description: |
-  [RAxML-ng](https://www.ncbi.nlm.nih.gov/pubmed/31070718/) is a fast, scalable
-  tool for maximum likelihood phylogenetic inference. The alignment for this
-  phylogeny is provided by [MAFFT](https://www.ncbi.nlm.nih.gov/pubmed/12136088/),
-  and the tree is visualized using [phylotree.js](https://www.ncbi.nlm.nih.gov/pubmed/30045713/).
+id: raxml-ng
+section_name: RAxML-NG
+section_href: https://github.com/amkozlov/raxml-ng/wiki
+description: '<a href="https://github.com/amkozlov/raxml-ng/wiki">RAxML-NG</a> is a fast, scalable and user-friendly tool for maximum likelihood phylogenetic inference. <em class="text-muted small" style="margin-left: 1rem">DOI: <a class="module-doi" data-doi="10.1093/bioinformatics/btz305" data-toggle="popover" href="https://doi.org/10.1093/bioinformatics/btz305" target="_blank">10.1093/bioinformatics/btz305</a></em>.'
 -->
 <style>
   {{{stylesheet}}}
