Update haplotype sub-report script and module to use abstracted metadata
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/assets/kelpie_mqc.html
+++ b/assets/kelpie_mqc.html
@@ -1,6 +1,8 @@
 <!--
-id: haplotypes
-description: Summary table of haplotypes
+id: {{toolnamelower}}
+section_name: {{toolname}}
+section_href: {{toollink}}
+description: '<a href="{{toollink}}">{{toolname}}</a> {{tooldescription}} <em class="text-muted small" style="margin-left: 1rem">DOI: <a class="module-doi" data-doi="{{doi}}" data-toggle="popover" href="https://doi.org/{{doi}}" target="_blank">{{doi}}</a></em>.'
 -->
 <style>
   .kelpieseq table {
