Update MultiQC config to support variants table

--- a/assets/kelpie_mqc.html
+++ b/assets/kelpie_mqc.html
@@ -1,6 +1,6 @@
 <!--
-id: {{toolnamelower}}
-section_name: {{toolname}}
+id: {{toolnamelower}}_haplotype
+section_name: {{toolname}} (Haplotypes)
 section_href: {{toollink}}
 description: '<a href="{{toollink}}">{{toolname}}</a> {{tooldescription}} <em class="text-muted small" style="margin-left: 1rem">DOI: <a class="module-doi" data-doi="{{doi}}" data-toggle="popover" href="https://doi.org/{{doi}}" target="_blank">{{doi}}</a></em>.'
 -->
